--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cra-template-pwa": "2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^3.5.2"
   },
