--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
+    "@vercel/blob": "^0.27.1",
     "cra-template-pwa": "2.0.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
     "particles.js": "^2.0.0",
     "react": "^18.2.0",
