--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vercel/blob": "^0.27.1",
     "cra-template-pwa": "2.0.0",
     "dotenv": "^16.4.7",
+    "ffmpeg": "^0.0.4",
     "framer-motion": "^11.15.0",
     "particles.js": "^2.0.0",
     "react": "^18.2.0",
